# auto_db_mapping

./: .gitignore  Cargo.toml  README.md
src/: attributes.rs  joined_row.rs  lib.rs  row.rs  types.rs
